--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="src/sass/main.scss" />
 	</head>
 	<body>
+		Hellow
 		<script src="src/js/index.js"></script>
 	</body>
 </html>
