--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 					Based in Poland</p>
 				</div>
 				
-				<ul class='textSmall'>
-					<li ><a href='#'>Email</a></li>
-					<li><a href='#'>LinkeIn</a></li>
-					<li><a href='#'>Instagram</a></li>
-					<li><a href='#'>Blog</a></li>
-					<li><a href='#'>CV</a></li>
+				<ul class='textSmall '>
+					<li><a href='#' class='link'>Email</a></li>
+					<li><a href='#' class='link'>LinkeIn</a></li>
+					<li><a href='#' class='link'>Instagram</a></li>
+					<li><a href='#' class='link'>Blog</a></li>
+					<li><a href='#' class='link'>CV</a></li>
 				</ul>
 				
 				<div class='textSmall'>
@@ -32,6 +32,9 @@
 
 		</section>
 		
+		<section class='container autolayout'>
+			Text
+		</section>
 		
 		<script src="src/js/index.js"></script>
 	</body>
